# state-machine

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
doc/examples/: moka.dot
doc/svgs/: .onoffswitch.dot.swp  onoffswitch.dot  timedswitch.dot
examples/: main.cpp
examples/OnOffSwitch/: OnOffSwitch.cpp  OnOffSwitch.h
examples/TimedSwitch/: TimedSwitch.cpp  TimedSwitch.h
examples/moka/: Moka.cpp  Moka.h
examples/onoffSwitch/: OnOffSwitch.cpp
examples/onoffswitch/: OnOffSwitch.cpp  OnOffSwitch.h
examples/timedswitch/: TimedSwitch.cpp  TimedSwitch.h
include/antoniocoratelli/: Event.h  State.h  StateMachine.h  Transition.h
include/antoniocoratelli/StateMachine/: StateMachine.h
include/antoniocoratelli/statemachine/: Event.h  State.h  StateMachine.h  Transition.h
src/: main.cpp
